## PLUXML 5.8.x (YYYY/MM/DD) ##
FIX plxShow::catList() and plxShow::catId multiples article with same category #495 (bazooka07)

## PLUXML 5.8.4 (2020/09/07) ##
[+] Disable removing short words on urlify (P3ter)
FIX Icon's CSS in medias manager (P3ter)
FIX Reduce notification bar width (P3ter)
FIX Error "Constant PLX_SITE_LANG already defined" (bazooka07)
FIX Do not use urlify for links (P3ter)
FIX Medias sorting in the backoffice (P3ter, sudwebdesign)
FIX Medias breadcrumb in the backoffice (P3ter, sudwebdesign)
FIX 404 error with tracking params in the URL (bazooka07)
FIX Display thumbnail in administration for SVG medias #482 #479 (bazooka07)

## PLUXML 5.8.3 (2020/05/19) ##
[+] New Fontello icons on authentification page and in the admin panel (bazooka07)
[+] Enhancement for CSRF token #385 (bazooka07)
[+] New "rename" and "copy to clipboard" icons in medias administration page #387 (bazooka07)
[+] plxMotor and plxFeed regex refacto #380 (P3ter, bazooka07)
[+] plxToken and plxCapcha optimisations #406 (bazooka07)
[+] plxShow->artThumbnail can have a link to the article #426 (Thatoo)
FIX Articles and static pages with underscores are not visible #380 (P3ter)
FIX Headline and Tags toggles always closed in article edition #382 (sudwebdesign)
FIX Fix medias administration zoombox and javascript optimisations #387 (bazooka07)
FIX Error when adding or modifying a user #393 (P3ter)
FIX Alternative to PHPMailer with sendmail #401 (bazooka07)
FIX Used of an extern URL as a static page #403 (bazooka07)
FIX Comment editor is empty #418 (P3ter)
FIX Comments list sorting #419 (P3ter)
FIX Comments feed link is displayed even if comments are disabled #429 (guiguid)
FIX Default theme : double underline on footer menu (P3ter)
FIX Oauth2 token generation button #445 (bazooka07)

## PLUXML 5.8.2 (2020/02/09) ##
[+] #371 Check PluXml update using javascript if "curl" or "file_get_contents" can not be used (bazooka07)
FIX #365 plxUtils::getLangs() optimisations (bazooka07)