@@ -1,4 +1,5 @@
 ## PLUXML 5.8.x (YYYY/MM/DD) ##
+FIX allow punctuation in articles and pages titles #505 (bazooka07)
 FIX plxShow::catList() and plxShow::catId multiples article with same category #495 (bazooka07)
 
 ## PLUXML 5.8.4 (2020/09/07) ##
